<resources>
    <string name="app_name">星座</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="yonghuming">用户名</string>
    <string name="sex">性别</string>
    <string name="xingzuo">星座</string>
    <string name="shengxiao">生肖</string>
    <string name="shengri">生日</string>
    <string name="qq">qq</string>




</resources>
